TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
WISH: keymap modification via esc-sequences.
WISH: searchable backlog
WISH: meta-tagging of data by regex/master process (my dream project)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.

6.1
TODO: is14755 feedback for all redn_t attributes
TODO: trailing spaces rmeoval for rect selections
	- update iso8859-7 table (euro and drachma round-trip et al.).
	- fix a crash when the selection scrolls out of the scrollback
          while the user still drags.
        - selections that were partially scrolled out of the window were
          not drawn correctly.
        - lines newly scrolled in were not initialized properly, leading
          to extremely long lines and (hopefully) some segfaults.

6.0  Sat Dec 24 13:58:56 CET 2005
	- make it compile without SMART_RESIZE again.
        - enable slow link support by default.
        - fix relative cursor-positioning not respecting scrolling regions
          (also a bug in original rxvt).
        - initialize termios structure to zero when fetching it fails
          (see http://www.freebsd.org/cgi/query-pr.cgi?pr=84647 for a
          partial patch).
        - bump max columns/rows to 10000 each.
        - bump max savelines to 10000000.
        - -pty-fd now passes the urxvtc fd to the urxvtd process.
        - avoid linking against -lnsl/-lsocket/-lxpg4 unless neccessary.
        - major code cleanup (still not complete, though).
        - implement -hold option.
        - _major_ rewrite of internal buffer handling:
	- re-flow on resize, lines get wrapped instead of winged.
	- circular line buffer (substantially speeds up scrolling).
        - slightly less code + data memory usage per terminal.
	- slight overall speed improvements.
        - considerably improved code clarity.
        - partial-screen scrolls no longer end up in the scrollback